# Auto-GPT

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt
scripts/: agent_manager.py  ai_config.py  ai_functions.py  browse.py  call_ai_function.py  chat.py  commands.py  config.py  execute_code.py  json_parser.py  llm_utils.py  main.py  speak.py  token_counter.py
tests/: json_tests.py
